samples/_failures_safe/1761346648_d9fcb9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_285136f2.c: In function ‘main’:
./samples/SAFE/__tmp_285136f2.c:154:34: error: expected ‘)’ at end of input
  154 |     sort_word_counts(unique_words
      |                     ~            ^
      |                                  )
./samples/SAFE/__tmp_285136f2.c:154:5: error: too few arguments to function ‘sort_word_counts’
  154 |     sort_word_counts(unique_words
      |     ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_285136f2.c:96:6: note: declared here
   96 | void sort_word_counts(struct WordCount* word_counts, int count) {
      |      ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_285136f2.c:154:5: error: expected declaration or statement at end of input
  154 |     sort_word_counts(unique_words
      |     ^~~~~~~~~~~~~~~~
